--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
 Django==4.0.4
+imageio==2.17.0
+imutils==0.5.4
+joblib==1.1.0
+networkx==2.8
 numpy==1.22.3
+opencv-contrib-python==4.3.0.36
+packaging==21.3
+pandas==1.4.2
+Pillow==9.1.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
+PyWavelets==1.3.0
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scipy==1.8.0
+six==1.16.0
 sqlparse==0.4.2
+threadpoolctl==3.1.0
+tifffile==2022.4.22
