--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
+cycler==0.11.0
 Django==4.0.4
+fonttools==4.33.2
 imageio==2.17.0
 imutils==0.5.4
 joblib==1.1.0
+kiwisolver==1.4.2
+matplotlib==3.5.1
 networkx==2.8
 numpy==1.22.3
 opencv-contrib-python==4.3.0.36
