--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+3-1==1.0.0
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
 cycler==0.11.0
+dill==0.3.4
 Django==4.0.4
 fonttools==4.33.2
 imageio==2.17.0
